--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,14 @@ indent_size = 8
 indent_style = space
 indent_size = 4
 
+[*.css]
+indent_style = space
+indent_size = 4
+
+[*.js]
+indent_style = space
+indent_size = 4
+
 [*.html]
 indent_style = space
 indent_size = 2
